added data binding components

--- a/src/app/topics/data-binding/attribute-binding/attribute-binding.component.html
+++ b/src/app/topics/data-binding/attribute-binding/attribute-binding.component.html
@@ -1,5 +1,6 @@
+<h4>Data Binding : Attribute Binding Example</h4>
 <div class="container">
-    <h2>User Details : Example of Attribute Binding</h2>
+    
     <table class="table table-sm table-bordered m-t-4">
       <tr>
         <th [attr.colspan]="columnSpan">Name</th>
