--- a/src/app/topics/data-binding/property-binding/property-binding.component.html
+++ b/src/app/topics/data-binding/property-binding/property-binding.component.html
@@ -1,1 +1,2 @@
-<p>property-binding works!</p>
+<h4>Data Binding : Property Binding Example</h4>
+<div [ngStyle]="{color:colorVal}">This is an example of property binding</div>
