--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,6 +36,14 @@
 <div [ngStyle]="{'color': 'red'}">Learning Angular ngStyle using straight color value is fun!</div>
 <div [ngStyle]="{'color': colorName}">Learning Angular ngStyle using color variable is fun!</div>
 <div [ngClass]="{'one': true, 'two':false}">ngClass example using app.component.css classes - one and two</div>
+<br>
+<app-interpolation></app-interpolation>
+<br>
+<app-property-binding></app-property-binding>
+<br>
 <app-event-binding></app-event-binding>
+<br>
 <app-attribute-binding></app-attribute-binding>
+<br>
+<app-two-way-binding></app-two-way-binding>
 <router-outlet></router-outlet>
