--- a/src/app/topics/data-binding/event-binding/event-binding.component.html
+++ b/src/app/topics/data-binding/event-binding/event-binding.component.html
@@ -1,5 +1,5 @@
-<h3>https://www.netjstech.com/2020/04/angular-event-binding-with-examples.html</h3>
-<h3>Event Binding Example</h3>
+<h4>Useful Data Binding Examples - https://www.netjstech.com/2020/04/angular-event-binding-with-examples.html</h4>
+<h4>Data Binding : Event Binding Example</h4>
 <div class="container">
     <div class="row">
       <div class="col-md-12">
